# RFQ-Generator

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt  rfq_final.md
src/: app.py
src/rfq_generator/: crew.py  main.py
src/rfq_generator/config/: agents.yaml  tasks.yaml
