[project]
name = "rfq_generator"
version = "0.1.0"
description = "rfq_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "streamlit"
]

[project.scripts]
rfq_generator = "rfq_generator.main:run"
run_crew = "rfq_generator.main:run"
train = "rfq_generator.main:train"
replay = "rfq_generator.main:replay"
test = "rfq_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
